Package_Tools/include-C/libxml2/libxml/xmlreader.h

#define __XML_XMLREADER_H__
/**
 * xmlParserSeverities:
 *
 * How severe an error callback is when the per-reader error callback API
 * is used.
 */
typedef enum {
    XML_PARSER_SEVERITY_VALIDITY_WARNING = 1,
    XML_PARSER_SEVERITY_VALIDITY_ERROR = 2,
    XML_PARSER_SEVERITY_WARNING = 3,
    XML_PARSER_SEVERITY_ERROR = 4
} xmlParserSeverities;
/**
 * xmlTextReaderPtr:
 *
 * Pointer to an xmlReader context.
 */
typedef xmlTextReader *xmlTextReaderPtr;
extern const xmlChar * 
		    xmlTextReaderConstXmlVersion(xmlTextReaderPtr reader);
extern int 
		    xmlTextReaderStandalone     (xmlTextReaderPtr reader);
/*
 * Index lookup
 */
extern long 
		xmlTextReaderByteConsumed	(xmlTextReaderPtr reader);
/*
 * New more complete APIs for simpler creation and reuse of readers
 */
extern xmlTextReaderPtr 
		xmlReaderWalker		(xmlDocPtr doc);
extern xmlTextReaderPtr 
		xmlReaderForDoc		(const xmlChar * cur,
					 const char *URL,
					 const char *encoding,
					 int options);
extern xmlTextReaderPtr 
		xmlReaderForFile	(const char *filename,
					 const char *encoding,
					 int options);
extern xmlTextReaderPtr 
		xmlReaderForMemory	(const char *buffer,
					 int size,
					 const char *URL,
					 const char *encoding,
					 int options);
extern xmlTextReaderPtr 
		xmlReaderForFd		(int fd,
					 const char *URL,
					 const char *encoding,
					 int options);
extern xmlTextReaderPtr 
		xmlReaderForIO		(xmlInputReadCallback ioread,
					 xmlInputCloseCallback ioclose,
					 void *ioctx,
					 const char *URL,
					 const char *encoding,
					 int options);
extern int 
		xmlReaderNewWalker	(xmlTextReaderPtr reader,
					 xmlDocPtr doc);
extern int 
		xmlReaderNewDoc		(xmlTextReaderPtr reader,
					 const xmlChar * cur,
					 const char *URL,
					 const char *encoding,
					 int options);
extern int 
		xmlReaderNewFile	(xmlTextReaderPtr reader,
					 const char *filename,
					 const char *encoding,
					 int options);
extern int 
		xmlReaderNewMemory	(xmlTextReaderPtr reader,
					 const char *buffer,
					 int size,
					 const char *URL,
					 const char *encoding,
					 int options);
extern int 
		xmlReaderNewFd		(xmlTextReaderPtr reader,
					 int fd,
					 const char *URL,
					 const char *encoding,
					 int options);
extern int 
		xmlReaderNewIO		(xmlTextReaderPtr reader,
					 xmlInputReadCallback ioread,
					 xmlInputCloseCallback ioclose,
					 void *ioctx,
					 const char *URL,
					 const char *encoding,
					 int options);
/*
 * Error handling extensions
 */
typedef void *  xmlTextReaderLocatorPtr;
/**
 * xmlTextReaderErrorFunc:
 * @arg: the user argument
 * @msg: the message
 * @severity: the severity of the error
 * @locator: a locator indicating where the error occurred
 *
 * Signature of an error callback from a reader parser
 */
typedef void ( *xmlTextReaderErrorFunc)(void *arg,
					       const char *msg,
					       xmlParserSeverities severity,
					       xmlTextReaderLocatorPtr locator);
extern int 
	    xmlTextReaderLocatorLineNumber(xmlTextReaderLocatorPtr locator);
extern xmlChar * 
	    xmlTextReaderLocatorBaseURI (xmlTextReaderLocatorPtr locator);
extern void 
	    xmlTextReaderSetErrorHandler(xmlTextReaderPtr reader,
					 xmlTextReaderErrorFunc f,
					 void *arg);
extern void 
	    xmlTextReaderSetStructuredErrorHandler(xmlTextReaderPtr reader,
						   xmlStructuredErrorFunc f,
						   void *arg);
extern void 
	    xmlTextReaderGetErrorHandler(xmlTextReaderPtr reader,
					 xmlTextReaderErrorFunc *f,
					 void **arg);