Package_Tools/include-C/libxml2/libxml/in_arbeit/fertig/xmlreader.pp


function xmlTextReaderConstXmlVersion(reader:TxmlTextReaderPtr):PxmlChar;cdecl;external;
function xmlTextReaderStandalone(reader:TxmlTextReaderPtr):longint;cdecl;external;
{
 * Index lookup
  }
function xmlTextReaderByteConsumed(reader:TxmlTextReaderPtr):longint;cdecl;external;
{
 * New more complete APIs for simpler creation and reuse of readers
  }
function xmlReaderWalker(doc:TxmlDocPtr):TxmlTextReaderPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderForDoc(cur:PxmlChar; URL:Pchar; encoding:Pchar; options:longint):TxmlTextReaderPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderForFile(filename:Pchar; encoding:Pchar; options:longint):TxmlTextReaderPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderForMemory(buffer:Pchar; size:longint; URL:Pchar; encoding:Pchar; options:longint):TxmlTextReaderPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderForFd(fd:longint; URL:Pchar; encoding:Pchar; options:longint):TxmlTextReaderPtr;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderForIO(ioread:TxmlInputReadCallback; ioclose:TxmlInputCloseCallback; ioctx:pointer; URL:Pchar; encoding:Pchar; 
           options:longint):TxmlTextReaderPtr;cdecl;external;
function xmlReaderNewWalker(reader:TxmlTextReaderPtr; doc:TxmlDocPtr):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderNewDoc(reader:TxmlTextReaderPtr; cur:PxmlChar; URL:Pchar; encoding:Pchar; options:longint):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderNewFile(reader:TxmlTextReaderPtr; filename:Pchar; encoding:Pchar; options:longint):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderNewMemory(reader:TxmlTextReaderPtr; buffer:Pchar; size:longint; URL:Pchar; encoding:Pchar; 
           options:longint):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderNewFd(reader:TxmlTextReaderPtr; fd:longint; URL:Pchar; encoding:Pchar; options:longint):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function xmlReaderNewIO(reader:TxmlTextReaderPtr; ioread:TxmlInputReadCallback; ioclose:TxmlInputCloseCallback; ioctx:pointer; URL:Pchar; 
           encoding:Pchar; options:longint):longint;cdecl;external;
{
 * Error handling extensions
  }
type
  PxmlTextReaderLocatorPtr = ^TxmlTextReaderLocatorPtr;
  TxmlTextReaderLocatorPtr = pointer;
{*
 * xmlTextReaderErrorFunc:
 * @arg: the user argument
 * @msg: the message
 * @severity: the severity of the error
 * @locator: a locator indicating where the error occurred
 *
 * Signature of an error callback from a reader parser
  }
(* Const before type ignored *)

  TxmlTextReaderErrorFunc = procedure (arg:pointer; msg:Pchar; severity:TxmlParserSeverities; locator:TxmlTextReaderLocatorPtr);cdecl;

function xmlTextReaderLocatorLineNumber(locator:TxmlTextReaderLocatorPtr):longint;cdecl;external;
function xmlTextReaderLocatorBaseURI(locator:TxmlTextReaderLocatorPtr):PxmlChar;cdecl;external;
procedure xmlTextReaderSetErrorHandler(reader:TxmlTextReaderPtr; f:TxmlTextReaderErrorFunc; arg:pointer);cdecl;external;
procedure xmlTextReaderSetStructuredErrorHandler(reader:TxmlTextReaderPtr; f:TxmlStructuredErrorFunc; arg:pointer);cdecl;external;
procedure xmlTextReaderGetErrorHandler(reader:TxmlTextReaderPtr; f:PxmlTextReaderErrorFunc; arg:Ppointer);cdecl;external;
{$endif}
{ LIBXML_READER_ENABLED  }
{ C++ end of extern C conditionnal removed }
{$endif}
{ __XML_XMLREADER_H__  }

implementation


end.
